# FirstVulkan

./: .gitignore  CMakeLists.txt  VulkanApp.cpp  VulkanApp.h  compile_shader.bat  main.cpp
shader/: main.frag  main.vert
shader/spir-v/: compile_shader.bat  frag.spv  main_frag.spv  main_vert.spv  vert.spv
